--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,21 @@
 {
   "name": "Schulweg-Detektive",
   "short_name": "Schulweg",
-  "description": "Finde Gefahren und gute Stellen auf deinem Schulweg",
+  "description": "Melde gefährliche und gute Stellen auf deinem Schulweg",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#fef3c7",
+  "background_color": "#f59e0b",
   "theme_color": "#f59e0b",
-  "orientation": "portrait",
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
 }
